# DendronGUI

./: CMakeLists.txt  FindOSCPACK.cmake  README.md  configdialog.cpp  configdialog.h  configdialog.ui  dendron.h  iconos.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
QCustomPlot/qcustomplot/examples/plots/: mainwindow.cpp
